--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,149 @@
 /* You can add global styles to this file, and also import other style files */
+.modal {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+.modal-content {
+  margin: auto;
+  border: 1px solid #888;
+  width: 30%;
+  
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px;
+  margin-bottom: 5px;
+  background-color: #fefefe;
+}
+
+.modal-body,
+.modal-footer {
+  padding: 10px;
+  
+}
+
+.modal-body{
+  background-color: #fefefe;
+  position: relative;
+  height: 400px;
+
+}
+
+.bold {
+  color: #3c368a;
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.search-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  border: 1px solid gray;
+  float: left;
+  padding: 0 10px;
+  width: 45%;
+}
+.title{
+  padding: 0 10px;
+  font-size: 35px;
+}
+.search-field {
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-size: 16px;
+  outline: none;
+  border: none;
+}
+.close {
+  color: #3c368a;
+  float: right;
+  font-size: 35px;
+  font-weight: bolder;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  text-align: left;
+  padding: 15px 10px;
+}
+
+tr:nth-child(odd) {
+  background-color: #3c368a;
+  color: white;
+  margin: 10px;
+  font-size: 15px;
+}
+
+tr:nth-child(even) {
+  border: 1px solid #3c368a;
+  color: black;
+  margin: 10px;
+  font-size: 15px;
+}
+tr:first-child {
+  background-color: transparent;
+  color: #000;
+}
+
+button {
+  background-color: #3c368a;
+  color: white;
+  padding: 10px 20px;
+  width: 30%;
+  position: absolute;
+  bottom: 10px;
+  right: 10px; 
+  outline: none;
+  border: none;
+}
+
+@media screen and (max-width:768px) {
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        border: 1px solid #888;
+        width: 95%;
+        height: 60%;
+        position: relative;
+      }
+
+      .search-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 25px;
+        border: 1px solid gray;
+        float: left;
+        padding: 0 10px;
+        width: 75%;
+      }
+}
