--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,38 +12,54 @@
       </div>
       <img src="../assets/icons/close.png" height="40px" width="40px" alt="" />
     </div>
+    
+
     <div class="modal-body">
-      <div class="search-container">
-        <img
-      src="../assets/icons/search.png"
-      height="20px"
-      width="20px"
-      alt=""
-    />
-      <input class="search-field" placeholder="Search" type="text" />
+      <div class="">
+        <div class="search-container">
+          <img
+            src="../assets/icons/search.png"
+            height="20px"
+            width="20px"
+            alt=""
+          />
+          <input class="search-field" placeholder="Search" type="text" />
+        </div>
       </div>
-
-      <table>
-        <tr>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Email</th>
-          <th>Phone</th>
-        </tr>
-        <tr>
-          <td>Alfreds Futterkiste</td>
-          <td>Maria Anders</td>
-          <td>Germany</td>
-          <td>+91 3243248</td>
-        </tr>
-        <tr>
-          <td>Alfreds Futterkiste</td>
-          <td>Maria Anders</td>
-          <td>Germany</td>
-          <td>+91 3243248</td>
-        </tr>
-      </table>
-
+      <div style="overflow-x: auto">
+        <table>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+          </tr>
+          <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <td>abmestri25@gmail.com</td>
+            <td>+91 3243248</td>
+          </tr>
+          <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <td>abhishek.mestri@hirdhav</td>
+            <td>+91 3243248</td>
+          </tr>
+          <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <td>abmestri25@gmail.com</td>
+            <td>+91 3243248</td>
+          </tr>
+          <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <td>abhishek.mestri@hirdhav</td>
+            <td>+91 3243248</td>
+          </tr>
+        </table>
+      </div>
       <div class="modal-footer">
         <button>Select</button>
       </div>
