--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,57 +12,40 @@
       </div>
       <img src="../assets/icons/close.png" height="40px" width="40px" alt="" />
     </div>
-    
 
     <div class="modal-body">
-      <div class="">
-        <div class="search-container">
-          <img
-            src="../assets/icons/search.png"
-            height="20px"
-            width="20px"
-            alt=""
-          />
-          <input class="search-field" placeholder="Search" type="text" />
+      <div class="search-container">
+        <img
+          src="../assets/icons/search.png"
+          height="20px"
+          width="20px"
+          alt=""
+        />
+        <input class="search-field" placeholder="Search" type="text" />
+      </div>
+
+      <div class="container">
+        <div class="row headers">
+          <div class="col-lg-3 col-md-6">First Name</div>
+          <div class="col-lg-3 col-md-6">Last Name</div>
+          <div class="col-lg-4 col-md-12">Email</div>
+          <div class="col-lg-2 col-md-12">Phone</div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">Abhishek</div>
+          <div class="col-lg-3 col-md-6">Mestri</div>
+          <div class="col-lg-4 col-md-12">abhishek@gmail.com</div>
+          <div class="col-lg-2 col-md-12">123457890</div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">Amol</div>
+          <div class="col-lg-3 col-md-6">Navle</div>
+          <div class="col-lg-4 col-md-12">amolnvale@gmail.com</div>
+          <div class="col-lg-2 col-md-12">12345457890</div>
         </div>
       </div>
-      <div style="overflow-x: auto">
-        <table>
-          <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Phone</th>
-          </tr>
-          <tr>
-            <td>Alfreds Futterkiste</td>
-            <td>Maria Anders</td>
-            <td>abmestri25@gmail.com</td>
-            <td>+91 3243248</td>
-          </tr>
-          <tr>
-            <td>Alfreds Futterkiste</td>
-            <td>Maria Anders</td>
-            <td>abhishek.mestri@hirdhav</td>
-            <td>+91 3243248</td>
-          </tr>
-          <tr>
-            <td>Alfreds Futterkiste</td>
-            <td>Maria Anders</td>
-            <td>abmestri25@gmail.com</td>
-            <td>+91 3243248</td>
-          </tr>
-          <tr>
-            <td>Alfreds Futterkiste</td>
-            <td>Maria Anders</td>
-            <td>abhishek.mestri@hirdhav</td>
-            <td>+91 3243248</td>
-          </tr>
-        </table>
-      </div>
-      <div class="modal-footer">
+
         <button>Select</button>
-      </div>
     </div>
   </div>
 </div>
