--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,16 +32,23 @@
           <div class="col-lg-2 col-md-12">Phone</div>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6">Abhishek</div>
-          <div class="col-lg-3 col-md-6">Mestri</div>
+          <div class="col-lg-3 col-md-1">Abhishek</div>
+          <div class="col-lg-3 col-md-11">Mestri</div>
           <div class="col-lg-4 col-md-12">abhishek@gmail.com</div>
           <div class="col-lg-2 col-md-12">123457890</div>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-6">Amol</div>
-          <div class="col-lg-3 col-md-6">Navle</div>
+          <div class="col-lg-3 col-md-1">Amol</div>
+          <div class="col-lg-3 col-md-11">Navle</div>
           <div class="col-lg-4 col-md-12">amolnvale@gmail.com</div>
           <div class="col-lg-2 col-md-12">12345457890</div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-3 col-md-1">Abhishek</div>
+          <div class="col-lg-3 col-md-11">Mestri</div>
+          <div class="col-lg-4 col-md-12">abhishek@gmail.com</div>
+          <div class="col-lg-2 col-md-12">123457890</div>
         </div>
       </div>
 
