--- a/src/styles.css
+++ b/src/styles.css
@@ -85,7 +85,6 @@ button {
   position: absolute;
 }
 
-
 .row {
   --ast-gap-x: 1.5rem;
   --ast-gap-y: 0;
@@ -96,7 +95,7 @@ button {
   margin-left: calc(var(--ast-gap-x) * -0.5);
 }
 
-.row:nth-child(even) {
+.row:nth-child(odd) {
   background-color: #3c368a;
   color: white;
   font-size: 15px;
@@ -105,7 +104,7 @@ button {
   padding: 10px 5px;
 }
 
-.row:nth-child(odd) {
+.row:nth-child(even) {
   color: black;
   font-size: 15px;
   border: 1px solid #3c368a;
@@ -119,6 +118,7 @@ button {
   border: none;
   margin: 5px 0;
   padding: 10px 5px;
+  background-color: transparent;
 }
 
 .row > * {
@@ -141,7 +141,6 @@ button {
 }
 
 @media screen and (max-width: 768px) {
-
   .row {
     --ast-gap-x: 1.5rem;
     --ast-gap-y: 0;
@@ -156,7 +155,7 @@ button {
     box-sizing: border-box;
     flex-shrink: 0;
     max-width: 100%;
-    padding-right: calc(var(--ast-gap-x) * 1);
+    padding-right: calc(var(--ast-gap-x) * 1.22);
     padding-left: calc(var(--ast-gap-x) * 0.3);
     margin-top: var(--ast-gap-y);
   }
@@ -200,7 +199,6 @@ button {
     display: none !important;
   }
 }
-
 
 @media (min-width: 767px) {
   .col-md-1 {
@@ -250,8 +248,6 @@ button {
   .col-md-12 {
     flex: 0 0 auto;
     width: 100%;
-    display: block !important;
-
   }
 }
 @media (min-width: 576px) {
