--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,28 +31,65 @@
           <div class="col-lg-4 col-md-12">Email</div>
           <div class="col-lg-2 col-md-12">Phone</div>
         </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-1">Abhishek</div>
-          <div class="col-lg-3 col-md-11">Mestri</div>
-          <div class="col-lg-4 col-md-12">abhishek@gmail.com</div>
-          <div class="col-lg-2 col-md-12">123457890</div>
-        </div>
-        <div class="row">
+
+        <!-- this is for desktop -->
+        <div class="row ondesk">
           <div class="col-lg-3 col-md-1">Amol</div>
           <div class="col-lg-3 col-md-11">Navle</div>
-          <div class="col-lg-4 col-md-12">amolnvale@gmail.com</div>
-          <div class="col-lg-2 col-md-12">12345457890</div>
+          <div class="col-lg-4 col-md-12">amolnle@gmail.com</div>
+          <div class="col-lg-2 col-md-12">1234567890</div>
         </div>
 
-        <div class="row">
+        <div class="row ondesk">
           <div class="col-lg-3 col-md-1">Abhishek</div>
           <div class="col-lg-3 col-md-11">Mestri</div>
           <div class="col-lg-4 col-md-12">abhishek@gmail.com</div>
-          <div class="col-lg-2 col-md-12">123457890</div>
+          <div class="col-lg-2 col-md-12">1234567890</div>
+        </div>
+        <div class="row ondesk">
+          <div class="col-lg-3 col-md-1">Abhishek</div>
+          <div class="col-lg-3 col-md-11">Mestri</div>
+          <div class="col-lg-4 col-md-12">abhishek@gmail.com</div>
+          <div class="col-lg-2 col-md-12">1234567890</div>
+        </div>
+
+        <!-- this is mobile -->
+        <div class="row onmobile">
+          <div class="space-around">
+            <div class="">Abhishek</div>
+            <div class="ml-5">Mestri</div>
+          </div>
+
+          <div class="justify-center">
+            <div class="">abhishek@gmail.com</div>
+            <div class="">123457890</div>
+          </div>
+        </div>
+        <div class="row onmobile">
+          <div class="space-around">
+            <div class="">Abhishek</div>
+            <div class="ml-5">Mestri</div>
+          </div>
+
+          <div class="justify-center">
+            <div class="">abhishek@gmail.com</div>
+            <div class="">123457890</div>
+          </div>
+        </div>
+        <div class="row onmobile">
+          <div class="space-around">
+            <div class="">Abhishek</div>
+            <div class="ml-5">Mestri</div>
+          </div>
+
+          <div class="justify-center">
+            <div class="">abhishek@gmail.com</div>
+            <div class="">123457890</div>
+          </div>
         </div>
       </div>
 
-        <button>Select</button>
+      <button>Select</button>
     </div>
   </div>
 </div>
